@@ -33,30 +33,32 @@ class SpiceLexer(RegexLexer):
         'root': [
             (r'\n', Whitespace),
             (r'\s+', Whitespace),
-            (r'\\\n', Text),  # line continuations
+            (r'\\\n', Text),
+            # comments
             (r'//(.*?)\n', Comment.Single),
+            (r'/(\\\n)?[*]{2}(.|\n)*?[*](\\\n)?/', String.Doc),
             (r'/(\\\n)?[*](.|\n)*?[*](\\\n)?/', Comment.Multiline),
+            # keywords
             (r'(import|as)\b', Keyword.Namespace),
-            (r'(f|p|type|struct|const)\b', Keyword.Declaration),
-            (words(('if', 'else', 'for', 'foreach', 'while', 'break', 'continue', 'return', 'ext', 'inline', 'public'), suffix=r'\b'), Keyword),
-            (r'(true|false)\b', Keyword.Constant),
-            (words(('printf', 'sizeof'), suffix=r'\b(\()'), bygroups(Name.Builtin, Punctuation)),
+            (r'(f|p|type|struct)\b', Keyword.Declaration),
+            (words(('if', 'else', 'for', 'foreach', 'while', 'break', 'continue', 'return', 'assert', 'thread', 'unsafe', 'ext', 'dll'), suffix=r'\b'), Keyword),
+            (words(('const', 'signed', 'unsigned', 'inline', 'public'), suffix=r'\b'), Keyword.Pseudo),
+            (words(('new', 'switch', 'case', 'yield', 'stash', 'pick', 'sync'), suffix=r'\b'), Keyword.Reserved),
+            (r'(true|false|nil)\b', Keyword.Constant),
             (words(('double', 'int', 'short', 'long', 'byte', 'char', 'string', 'bool', 'dyn'), suffix=r'\b'), Keyword.Type),
-            # double_lit
-            (r'\d+(\.\d+[eE][+\-]?\d+|\.\d*|[eE][+\-]?\d+)', Number.Double),
-            (r'\.\d+([eE][+\-]?\d+)?', Number.Double),
-            # short_lit
-            (r'(0|[1-9][0-9]*s)', Number.Integer),
-            # long_lit
-            (r'(0|[1-9][0-9]*l)', Number.Integer.Long),
-            # int_lit
-            (r'(0|[1-9][0-9]*)', Number.Integer),
-            # string_lit
+            (words(('printf', 'sizeof', 'len', 'tid', 'join'), suffix=r'\b(\()'), bygroups(Name.Builtin, Punctuation)),
+            # numeric literals
+            (r'([0-9]*[.][0-9]+)', Number.Double),
+            (r'(([0][dD])?[0-9]+[sl]?)', Number.Integer),
+            (r'([0][bB][01]+[sl]?)', Number.Bin),
+            (r'([0][oO][0-7]+[sl]?)', Number.Oct),
+            (r'([0][xXhH][0-9a-fA-F]+[sl]?)', Number.Hex),
+            # string literal
             (r'"(\\\\|\\[^\\]|[^"\\])*"', String),
-            # char_lit
+            # char literal
             (r'\'(\\\\|\\[^\\]|[^\'\\])\'', String.Char),
             # tokens
-            (r'(<<=|>>=|<<|>>|<=|>=|\+=|-=|\*=|/=|&&|\|\||&|\||\+\+|--|\%|==|!=|[.]{3}|[+\-*/&])', Operator),
+            (r'(<<=|>>=|<<|>>|<=|>=|\+=|-=|\*=|/=|\%=|\|=|&=|\^=|&&|\|\||&|\||\+\+|--|\%|\^|\~|==|!=|[.]{3}|[+\-*/&])', Operator),
             (r'[|<>=!()\[\]{}.,;:\?]', Punctuation),
             # identifiers
             (r'[^\W\d]\w*', Name.Other),
