@@ -39,6 +39,8 @@ Version 2.13.0
   * Tcl: support ``${name}`` variables (#2145)
   * Terraform: accept leading whitespace for `<<` heredoc
     delimiters (#2162)
+  * Spice: add support for the recently added features including more
+    builtin functions and bin, oct, hex number formats (#)
 
 - Added styles:
 
